--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,2 +1,2 @@
-<input #searchInput class="cit-search" type="text" placeholder="Enter city name eg. London..." (keypress)="autocomplete(searchInput.value)" >
+<input #searchInput class="cit-search" type="text" placeholder="Enter city name eg. London..." (keyup)="autocomplete(searchInput.value)" >
 <button class="cit-button--primary" type="submit">Go</button>
