--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,15 +1,20 @@
-<input
-  [(ngModel)]="inputValue"
-  class="cit-search"
-  type="text"
-  placeholder="Enter city name eg. London..."
-  (keyup)="autocomplete(inputValue)"
-  required
-  #inputModel="ngModel"
-/>
-<ul *ngIf="results != null" class="cit-search__results">
-  <li *ngFor="let result of results.suggestions">
-    <a href="" [innerHTML]="result.label"></a>
-  </li>
-</ul>
-<button class="cit-button--primary" type="submit">Go</button>
+<div class="cit-search">
+  <input
+    [(ngModel)]="inputValue"
+    class="cit-search__input"
+    type="text"
+    placeholder="Enter city name eg. London..."
+    (keyup)="autocomplete(inputValue)"
+    required
+    #inputModel="ngModel"
+  />
+  <ul *ngIf="results != null" class="cit-search__list">
+    <li
+      *ngFor="let result of results.suggestions"
+      class="cit-search__list-item"
+    >
+      <a [routerLink]="[ result.address.country ]" [queryParams]="{ city: result.address.city}" [innerHTML]="result.label"></a>
+    </li>
+  </ul>
+</div>
+<button class="cit-button--primary" [routerLink]="['/city', inputValue]" type="submit">Go</button>
