--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -1,37 +1,48 @@
 .cit-search {
-  width: 240px;
-  font-size: 18px;
-  box-shadow: 0px 2px 20px 0px rgba(0,43,255,0.4);
-  border-radius: 4px;
-  background: #fff;
-  position: relative;
-  padding: 16px 24px;
-  box-sizing: border-box;
+  &__input {
+    width: 240px;
+    font-size: 18px;
+    box-shadow: 0px 2px 20px 0px rgba(0, 43, 255, 0.4);
+    border-radius: 4px;
+    background: #fff;
+    position: relative;
+    padding: 16px 24px;
+    box-sizing: border-box;
+    border: none;
 
-  &:hover {
-    cursor: pointer;
-    background: rgba(102, 105, 121, 0.1);
-    transition: all 200ms ease-in-out; 
+    &:hover {
+      cursor: pointer;
+      background-color: rgba(102, 105, 121, 0.1);
+      transition: background-color 200ms ease-out;
+    }
+
+    &:focus {
+      outline: none;
+    }
   }
-  
-  &__autocomplete {
-      display: none;
-      width: 100%;
-      margin-top: -2px;
-      color: #fff;
 
-     &-item {
-      width: 100%;
-      padding: 7px 15px;
+  &__list {
+    padding: 0;
+    margin: 0;
+    width: 240px;
+    position: absolute;
+    z-index: 999;
+    background: #fff;
+    border-radius: 4px;
+    box-shadow: 0px 2px 20px 0px rgba(0, 43, 255, 0.4);
+
+    &-item {
       border-right: 2px solid #eee;
       border-bottom: 2px solid #eee;
       border-left: 2px solid #eee;
-
+      display: flex;
+      min-height: 44px;
+      align-items: center;
+      padding: 12px 24px;
       &:hover {
-        background-color: rgba(0,43,255,0.4);
+        background-color: rgba(0, 43, 255, 0.4);
+        transition: background-color 200ms ease-out;
       }
     }
-
   }
-
 }
